# AlgorithemAssighments

./: CMakeLists.txt
src/: AlgoMethod.cpp  AlgoMethod.h  Edge.h  Graph.h  Main.cpp
src/source/Codes/: AlgoMethod.cpp  Main.cpp
src/source/headers/: Adjacent.h  AlgoMethod.h  Base.h  Edge.h  Graph.h  Vertex.h  main.h
